docs: public documentation site with GitHub Pages deploy
Turns the VitePress docs into a public microsite: home layout with the brand
mark, a nine-tile feature grid, and a sidebar grouped into Getting started /
Concepts / Operations / Migration.

New pages: configuration (every FIREMOOT_* variable with defaults), webhooks
(signature scheme, retry ladder, dead-letters), testing (@firemoot/test boot,
seed and TcpProxy chaos), admin dashboard. Expanded hosting into a full
self-hosting guide with a Fly.io walkthrough, and folded the generic parts of
the retired compat audit into the Stream migration guide.

Every command and sample is checked against the source; the soak figures come
from the last three nightly runs (p95 43-48ms, 285-290MiB peak RSS) rather
than the older locally measured ones.

The Pages deploy builds with DOCS_BASE=/firemoot/; the variable defaults to
"/" so local dev and preview are unaffected. Pages must be enabled in repo
settings with Source: GitHub Actions.